--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,29 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+default:     &default
+  adapter:   postgresql
+  encoding:  unicode
+  pool:      <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<:        *default
+  database:  osupp
+  username:  den
+  password:  '123456789'
+  host:      localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  <<:        *default
+  database:  db/test.postgresql
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  <<:        *default
+  database:  osupp
+  username:  den
+  password:  '123456789'
+  host:      https://osu-pp.herokuapp.com/
+  database:  db/production.postgresql
